--- a/package.json
+++ b/package.json
@@ -1,26 +1,10 @@
 {
-  "name": "telegram-openai-bot",
+  "name": "vercel-bot",
   "version": "1.0.0",
   "type": "module",
   "dependencies": {
-    "express": "^4.21.2",
+    "express": "^4.18.2",
     "node-telegram-bot-api": "^0.61.0",
-    "openai": "^4.104.0"
-  },
-  "description": "",
-  "main": "index.js",
-  "scripts": {
-    "test": "echo \"Error: no test specified\" && exit 1"
-  },
-  "repository": {
-    "type": "git",
-    "url": "git+https://github.com/peterpull/telegram-openai-bot.git"
-  },
-  "keywords": [],
-  "author": "",
-  "license": "ISC",
-  "bugs": {
-    "url": "https://github.com/peterpull/telegram-openai-bot/issues"
-  },
-  "homepage": "https://github.com/peterpull/telegram-openai-bot#readme"
+    "openai": "^4.10.0"
+  }
 }
