--- a/package.json
+++ b/package.json
@@ -3,7 +3,7 @@
   "version": "1.0.0",
   "type": "module",
   "dependencies": {
-    "telegraf": "^4.16.2",
+    "node-telegram-bot-api": "^0.61.0",
     "openai": "^4.10.0"
   }
 }
